// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`text-volume-v1 > golden golden-1 1`] = `
{
  "answer": {
    "type": "integer",
    "value": "699",
  },
  "commonMistakes": [
    {
      "answer": "5592",
      "explanation": "Это объём в битах. В ответе нужны байты.",
    },
    {
      "answer": "44736",
      "explanation": "При переводе битов в байты нужно делить на 8.",
    },
  ],
  "difficulty": 1,
  "examPart": 1,
  "generatorId": "text-volume-v1",
  "hints": [
    "Найди общий объём в битах.",
    "Умножь количество символов на число бит в одном символе.",
    "Переведи биты в байты: раздели на 8.",
  ],
  "id": "text-volume-v1:golden-1",
  "seed": "golden-1",
  "solution": [
    {
      "text": "Количество символов: 233. Размер каждого: 24 бит.",
    },
    {
      "text": "Общий объём: 233 × 24 = 5592 бит.",
    },
    {
      "text": "В байте 8 бит: 5592 ÷ 8 = 699 байт.",
    },
  ],
  "statement": "Используется условная кодировка. Размер символа: 24 бит. Количество символов: 233. Сколько байт занимает текст? Учитывай только символы, без служебных данных.",
  "subtype": "text-volume",
  "taskNumber": 1,
  "topics": [
    "Объём информации",
  ],
}
`;

exports[`text-volume-v1 > golden golden-2 1`] = `
{
  "answer": {
    "type": "integer",
    "value": "636",
  },
  "commonMistakes": [
    {
      "answer": "5088",
      "explanation": "Это объём в битах. В ответе нужны байты.",
    },
    {
      "answer": "40704",
      "explanation": "При переводе битов в байты нужно делить на 8.",
    },
  ],
  "difficulty": 1,
  "examPart": 1,
  "generatorId": "text-volume-v1",
  "hints": [
    "Найди общий объём в битах.",
    "Умножь количество символов на число бит в одном символе.",
    "Переведи биты в байты: раздели на 8.",
  ],
  "id": "text-volume-v1:golden-2",
  "seed": "golden-2",
  "solution": [
    {
      "text": "Количество символов: 159. Размер каждого: 32 бит.",
    },
    {
      "text": "Общий объём: 159 × 32 = 5088 бит.",
    },
    {
      "text": "В байте 8 бит: 5088 ÷ 8 = 636 байт.",
    },
  ],
  "statement": "Используется условная кодировка. Размер символа: 32 бит. Количество символов: 159. Сколько байт занимает текст? Учитывай только символы, без служебных данных.",
  "subtype": "text-volume",
  "taskNumber": 1,
  "topics": [
    "Объём информации",
  ],
}
`;

exports[`text-volume-v1 > golden golden-3 1`] = `
{
  "answer": {
    "type": "integer",
    "value": "53",
  },
  "commonMistakes": [
    {
      "answer": "424",
      "explanation": "Это объём в битах. В ответе нужны байты.",
    },
    {
      "answer": "3392",
      "explanation": "При переводе битов в байты нужно делить на 8.",
    },
  ],
  "difficulty": 1,
  "examPart": 1,
  "generatorId": "text-volume-v1",
  "hints": [
    "Найди общий объём в битах.",
    "Умножь количество символов на число бит в одном символе.",
    "Переведи биты в байты: раздели на 8.",
  ],
  "id": "text-volume-v1:golden-3",
  "seed": "golden-3",
  "solution": [
    {
      "text": "Количество символов: 53. Размер каждого: 8 бит.",
    },
    {
      "text": "Общий объём: 53 × 8 = 424 бит.",
    },
    {
      "text": "В байте 8 бит: 424 ÷ 8 = 53 байт.",
    },
  ],
  "statement": "Используется условная кодировка. Размер символа: 8 бит. Количество символов: 53. Сколько байт занимает текст? Учитывай только символы, без служебных данных.",
  "subtype": "text-volume",
  "taskNumber": 1,
  "topics": [
    "Объём информации",
  ],
}
`;
